<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".ui.newworkout.NewWorkoutActivity">

    <ImageView
        android:id="@+id/exerciseImageCategory"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="@color/lightBlue"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseImageCategory" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateCapital"
        android:fontFamily="@font/poppins"
        android:textColor="@color/whiteBlue"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName" />

    <TextView
        android:id="@+id/setsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/setsCapital"
        android:layout_marginTop="16dp"
        android:textColor="@color/whiteBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/weightCapital"
        android:textColor="@color/whiteBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setsTextView" />

    <Button
        android:id="@+id/updateWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/common_google_play_services_update_button"
        android:backgroundTint="@color/greenConfirm"
        app:layout_constraintBottom_toTopOf="@+id/cancelWorkoutButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/delete"
        android:backgroundTint="@color/redCancel"
        app:layout_constraintBottom_toTopOf="@+id/cancelWorkoutButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        android:textAllCaps="false"
        android:gravity="center"
        android:fontFamily="@font/pavanam"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input_round"
        app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateTextView" />

    <Button
        android:id="@+id/increaseSetsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/setsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setsTextView" />

    <TextView
        android:id="@+id/setsCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="1"
        android:textColor="@color/whiteBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/setsTextView"
        app:layout_constraintEnd_toStartOf="@+id/increaseSetsButton"
        app:layout_constraintStart_toEndOf="@+id/decreaseSetsButton"
        app:layout_constraintTop_toTopOf="@+id/setsTextView" />

    <Button
        android:id="@+id/decreaseSetsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/setsTextView"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/setsTextView" />

    <EditText
        android:id="@+id/weightTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_round"
        android:ems="10"
        android:inputType="number"
        android:gravity="center"
        android:hint="@string/weight_in_kgs"
        android:fontFamily="@font/pavanam"
        app:layout_constraintBottom_toBottomOf="@+id/weightTextView"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/weightTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>